# RAG-Agent-With-FastAPI

./: .env  .env.example  .gitignore  README.md  docs.txt  main.py  pyproject.toml
.cursor/hooks/state/: continual-learning.json
docs/: ai-docs.md  docs.txt
src/app/: main.py
src/app/agents/: __init__.py  agent.py  embeddings.py  ingestion_pipline.py  llm.py  prompts.py  retrieval.py
src/app/api/v1/: auth.py  rag.py  router.py  users.py
src/app/core/: config.py  http_errors.py  security.py
src/app/db/: session.py  vector_store.py
src/app/models/: user.py
src/app/schemas/: __init__.py  rag.py  user.py
src/app/services/: rag_service.py  user.py
src/streamlit/: __init__.py  api_client.py  app.py  config.py
tests/: conftest.py  test_auth.py  test_rag.py  test_users_crud.py
